package edu.ynu.se.xiecheng.achitectureclass.entity;

public enum  OrderStatus {
    UNPAID,      // 未支付
    PAID,        // 已支付
    CONFIRMED,   // 已确认
    SHIPPED,     // 已发货
    DELIVERED,   // 已送达
    CANCELLED,   // 已取消
    REFUNDED     // 已退款
}
